--- a/Main/templates/faq.html
+++ b/Main/templates/faq.html
@@ -17,14 +17,17 @@
   
   
 <body>
+  <div class="blog-single gray-bg">
+    <div class="ml-5 mt-5">
+      <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+          <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+            FAQ
+          </p>
+          <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+        </div>
+    </div>
+    <div class="container my-5 ">
 
-    <div class="container my-5">
-            <div class="w-2/4">
-              <div class="text-center mt-8 mb-5">
-                  <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: rgb(0, 0, 255);">FAQ</h2>
-                  <div class="w-16 h-1 bg-blue-900 mx-auto" style="background-color: rgb(0, 0, 255);"></div>
-              </div>
-          </div>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
                 <div class="card" style="min-height: 300px;">
@@ -137,6 +140,17 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+             <div class="card" style="min-height: 300px;">
+                <div class="d-flex">
+                    <div class="ml-4">
+                        <h5 class="text-xl font-weight-bold">Comment pouvons-nous vous aider dans votre projet ?</h5>
+                        <p class="text-lg">Chez ABC Solutions, notre objectif est de vous fournir un support complet pour la réalisation de votre projet. Que vous ayez besoin de conseils techniques, de solutions sur mesure ou de formation pour votre équipe, nous sommes là pour vous aider. Notre équipe d'experts est dévouée à répondre à vos besoins et à garantir la réussite de votre projet.</p>
+                    </div>
+                </div>
+             </div>
+           </div>
+
 
             
 
