--- a/Main/templates/commentaire.html
+++ b/Main/templates/commentaire.html
@@ -4,6 +4,11 @@
 
 
 <div class="" style="background-color: #e9f2fb;">
+    <div class="container-fluid">
+      <a class="btn btn" href="/formationview/{{idform}}/{{theme_id}}">
+      <i class="fas fa-arrow-left"></i> Retour
+      </a>
+  </div>
   <form method="POST" action="/enregistrer-commentaire/{{idform}}" id="form-commentaire" style="background-color: #e9f2fb;">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
     <div class="card-footer py-3 border-0" style="background-color: #e9f2fb;">
@@ -29,10 +34,7 @@
               src="../static/assets/images/unknown.jpg" alt="avatar" width="60"
               height="60" />
             <div>
-              <h6 class="fw-bold text-primary mb-1">{{ commentaire.auteur }}</h6>
-              <p class="text-muted small mb-0">
-                {{ commentaire.auteur }}
-              </p>
+              <h6 class="fw-bold text-primary mb-1">@{{ commentaire.auteur }}</h6>
             </div>
           </div>
 
@@ -60,13 +62,19 @@
 </div>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // Récupérez la valeur du nom d'utilisateur depuis sessionStorage
-      const userName= sessionStorage.getItem('userName');
-      // Pré-remplissez le champ "username" avec la valeur du nom d'utilisateur
-      const usernameInput = document.getElementById('username');
-      usernameInput.value = userName;
-    });
+document.addEventListener('DOMContentLoaded', function() {
+  // Récupérez la valeur du nom d'utilisateur depuis sessionStorage
+  const userName = sessionStorage.getItem('userName');
+  // Pré-remplissez le champ "username" avec la valeur du nom d'utilisateur
+  const usernameInput = document.getElementById('username');
+  // Vérifiez si userName est null
+  if (userName === null) {
+    usernameInput.value = "Anonyme";
+  } else {
+    usernameInput.value = userName;
+  }
+});
+
 </script>
 
 {% include 'footer.html' %}
