--- a/Main/templates/details_blog.html
+++ b/Main/templates/details_blog.html
@@ -16,26 +16,69 @@
 <body>
 <div class="col">
 <div class="row">
-<div class="col-md-8">
+<div class="col-md-9">
 <div class="col-md-12 ">
-<div class="container mt-5 mb-5" id="blog">
-    <h3 class="display-4 font-weight-bold mb-3" style="color: rgb(79, 82, 255);">{{ blog.titre }}</h3>
+<div class="mt-5 mb-5" id="blog" style="">
+    <h5 class="display-5 font-weight-bold mb-3" style="color: rgb(79, 82, 255);scale:0.7;">{{ blog.titre |safe  }}</h5>
     <hr style="border: 1px solid black;">
     <img src="../{{blog.imagePath}}" alt="Image de l'article" class="img-fluid rounded" style="height: 50vh; width: 100%">
-    <p  style="background-color: white;min-height: 300px;max-height: fit-content;padding: 10px;border-radius: 4px;"class="mt-4" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;text-align:justify;">
       {{ blog.description |safe}}
-    </p>
 </div>
   <br>
-  <br>
+  <br
+{% if commentaires %}
+<hr style="border: 1px solid black;">
+<div class="container-fluid shadow-sm">
+    <h6 style="text-align: center;font-weight:bold;">Commentaires</h6>
+<div id="comment-container">
+    {% for commentaire in commentaires %}
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex flex-start align-items-center">
+            <img class="rounded-circle shadow-1-strong me-3"
+              src="../static/assets/images/unknown.jpg" alt="avatar" width="60"
+              height="60" />
+            <div>
+              <h6 class="fw-bold text-primary mb-1">@{{ commentaire.auteur }}</h6>
+            </div>
+          </div>
 
-<div class="container" style="justify-content: center;display: flex;align-items: center;">
+          <p class="mt-3 mb-4 pb-2">
+            {{ commentaire.contenu }}
+          </p>
+
+          <div class="small d-flex justify-content-start">
+            <a href="#!" class="d-flex align-items-center me-3">
+              <i class="far fa-thumbs-up me-2"></i>
+              <p class="mb-0">Like</p>
+            </a>
+            <a href="#!" class="d-flex align-items-center me-3">
+              <i class="far fa-comment-dots me-2"></i>
+              <p class="mb-0">Comment</p>
+            </a>
+            <a href="#!" class="d-flex align-items-center me-3">
+              <i class="fas fa-share me-2"></i>
+              <p class="mb-0">Share</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+</div>
+</div>
+<br>
+<br>
+ <hr style="border: 1px solid black;">
+ {% endif %}
+ <br>
+ <br>
+<div class="container-fluid" style="justify-content: center;display: flex;align-items: center;">
     <div style="padding: 20px;">
         <a href="/comment_blog/{{ blog.id }}" class="btn btn" style="color: rgb(255, 255, 255);font-size: 20px;background-color: #1da1f2;border-radius: 30px;">
             Commenter
         </a>
-        </div>
-
+    </div>
+    
 
 
     <div class="share-buttons" style="display: inline;"> 
@@ -55,7 +98,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-4 blog-aside" style="margin-top: 12vh;">
+<div class="col-md-3 blog-aside" style="margin-top: 12vh;">
     <div class="widget widget-latest-post">
         <div class="widget-title">
             <h3>Derniers blog</h3>
@@ -67,12 +110,12 @@
                         <div class="latest-post-aside media">
                             <div class="lpa-left media-body">
                                 <div class="lpa-title" style="padding: 4px;">
-                                    <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.titre }}</a></h5>
+                                    <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.titre|safe  }}</a></h5>
                                 </div>
                                 <div class="lpa-meta" style="color: white;">
-                                    <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:20] }}...</a>
+                                    <a class="name" href="#" style="font-weight: bold;">{{ blg.description |safe | strip_tags | truncate(80)  }}...</a>
                                     <br>
-                                    <img src="../{{blg.imagePath}}" style="height: 120px;width: 120px;border-radius: 10px;" >
+                                    <img src="/{{blg.imagePath}}" style="height: 120px;width: 120px;border-radius: 10px;" >
                                     <a class="date text-muted" href="#" style="float: right;font-size: 10px;">{{ blg.date.strftime('%B %d, %Y') }}</a>
                                 </div>
                                 
@@ -81,9 +124,6 @@
                                 </div>
                             </div>
                             <div class="lpa-right">
-                                <a href="#">
-                                    <img src="{{ blg.imagePath }}" title="" alt="">
-                                </a>
                             </div>
                         </div>
                         <hr style="border: 1px solid black;">
@@ -127,10 +167,10 @@
                             <div class="latest-post-aside media">
                                 <div class="lpa-left media-body">
                                     <div class="lpa-title" style="padding: 4px;">
-                                        <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.titre }}</a></h5>
+                                        <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.titre |safe  }}</a></h5>
                                     </div>
                                     <div class="lpa-meta" style="color: white;">
-                                        <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:2000] }}...</a>
+                                        <a class="name" href="#" style="font-weight: bold;">{{ blg.description |safe | strip_tags| truncate(80) }}</a>
                                         <br>
                                         <img src="../{{blg.imagePath}}" style="height: 120px;width: 120px;border-radius: 10px;" >
                                         <a class="date text-muted" href="#" style="float: right;font-size: 10px;">{{ blg.date.strftime('%B %d, %Y') }}</a>
@@ -140,9 +180,6 @@
                                     </div>
                                 </div>
                                 <div class="lpa-right">
-                                    <a href="#">
-                                        <img src="{{ blg.imagePath }}" title="" alt="">
-                                    </a>
                                 </div>
                             </div>
                         {% endif %}
