--- a/Main/templates/details_confs.html
+++ b/Main/templates/details_confs.html
@@ -60,7 +60,7 @@
           </div>
           <div class="desc left">
             <h4 style="color: rgb(255, 255, 255);font-weight: bolder;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Nombre d'invités</h4>
-            <p style="color: white;">{{nb}}</p>
+            <p style="color: white;">{% if nb %}{{nb}}{% else %} - {% endif %}</p>
           </div>
         </div>
       </div>
@@ -99,11 +99,11 @@
                           <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
                           <div class="form-group">
                             <label for="userName">Nom :</label>
-                            <input type="text" class="form-control" id="userName" name="userName">
+                            <input type="text" class="form-control" id="userName" name="userName" required>
                           </div>
                           <div class="form-group">
                             <label for="userEmail">E-mail :</label>
-                            <input type="email" class="form-control" id="userEmail" name="userEmail">
+                            <input type="email" class="form-control" id="userEmail" name="userEmail" required>
                           </div>
                           <div class="row align-items-center">
                             <div class="col-auto">
