--- a/Main/templates/emploi.html
+++ b/Main/templates/emploi.html
@@ -19,7 +19,7 @@
     <div class="ml-5 mt-5">
       <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
           <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
-            {{offre.type}}
+            {{offre.type |capitalize }}
           </p>
           <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
         </div>
@@ -73,17 +73,17 @@
                               </div>
                               <div class="col-md-6">
                                   <div class="form-group">
-                                      <input name="Name" id="name" placeholder="Nom & Prenom *" class="form-control" type="text">
+                                      <input name="Name" id="name" placeholder="Nom & Prenom *" class="form-control" type="text" required>
                                   </div>
                               </div>
                               <div class="col-md-6">
                                   <div class="form-group">
-                                      <input name="Email" id="email" placeholder="Email *" class="form-control" type="email">
+                                      <input name="Email" id="email" placeholder="Email *" class="form-control" type="email" required>
                                   </div>
                               </div>
                               <div class="col-md-12">
                                   <div class="form-group">
-                                      <textarea name="message" id="message" placeholder="Petit paragraphe de motivation *" rows="4" class="form-control"></textarea>
+                                      <textarea name="message" id="message" placeholder="Petit paragraphe de motivation *" rows="4" class="form-control" required></textarea>
                                   </div>
                               </div>
                               <div class="form-group">
@@ -111,16 +111,16 @@
                                   <div class="latest-post-aside media">
                                     <div class="lpa-left media-body">
                                         <div class="lpa-title" style="padding: 4px;">
-                                            <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.fonc }}</a></h5>
+                                            <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;text-decoration:underline;">{{ blg.fonc |safe }}</a></h5>
                                         </div>
                                         <div class="lpa-meta" style="color: white;">
-                                            <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:20] }}...</a>
+                                            <a class="name" href="#" style="font-weight: bold;">{{ blg.description |safe | strip_tags| truncate(80)  }}...</a>
                                             <br>
                                             <img src="../{{blg.imagePath}}" style="height: 120px;width: 120px;border-radius: 10px;" >
                                             <a class="date text-muted" href="#" style="float: right;font-size: 10px;">{{ blg.date.strftime('%B %d, %Y') }}</a>
                                         </div>
                                         <div style="mt-1">
-                                            <a href="/details_blog/{{ blg.id }}" class="btn btn" style="border-radius: 50px;background-color: #0077b5;color: white;margin-top: 10px;">Voir plus</a>
+                                            <a href="/emploi/{{ blg.id }}" class="btn btn" style="border-radius: 50px;background-color: #0077b5;color: white;margin-top: 10px;">Voir plus</a>
                                         </div>
                                     </div>
                                     <div class="lpa-right">
