--- a/Main/templates/formation.html
+++ b/Main/templates/formation.html
@@ -44,7 +44,7 @@
                         </div>
                      
                             <h5 class="title" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 30px; color: #0062ff;word-wrap: break-word;">{{ formation.titre|safe }}</h5>
-                            <p class="text-muted mt-3 mb-0" style="font-family: 'Kanit';word-wrap: break-word;">{{ formation.description[:100] |safe }}...</p>
+                            <p class="text-muted mt-3 mb-0" style="font-family: 'Kanit';word-wrap: break-word;">{{ formation.description |safe | strip_tags| truncate(80)}}...</p>
                           <div style="margin-top: auto;">
                           <div class="d-flex flex-column align-items-center">
                                 <a href="/formationview/{{ form.id }}/{{ formation.id }}" class="btn btn" style="background-color: #0062ff; border-radius: 50%; color: white; text-align: center; scale: 1.4;"><i class="fa fa-play"></i></a>
