--- a/Main/templates/formations.html
+++ b/Main/templates/formations.html
@@ -57,11 +57,11 @@
                                               <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
                                               <div class="form-group">
                                                 <label for="userName">Nom :</label>
-                                                <input type="text" class="form-control" id="userName" name="userName">
+                                                <input type="text" class="form-control" id="userName" name="userName" required>
                                               </div>
                                               <div class="form-group">
                                                 <label for="userEmail">E-mail :</label>
-                                                <input type="email" class="form-control" id="userEmail" name="userEmail">
+                                                <input type="email" class="form-control" id="userEmail" name="userEmail" required>
                                               </div>
                                               <div class="row align-items-center">
                                                 <div class="col-auto">
@@ -91,8 +91,7 @@
                   
                       <h5 class="title" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 30px; color: #0062ff;word-wrap: break-word;">{{ formation.titre|safe }}</h5>
                       <p class="text-muted mt-3 mb-0" style="font-family: 'Kanit';word-wrap: break-word;">
-                          {% set truncatedContent = formation.description[:60] %}
-                          {{ truncatedContent }}...
+                          {{ formation.description |safe | strip_tags| truncate(80) }}...
                       </p>
                       <div style="margin-top: auto;">
                         <div class="d-flex flex-column align-items-center ">
