--- a/Main/templates/formationview.html
+++ b/Main/templates/formationview.html
@@ -84,10 +84,54 @@
                     </div>
                 </div>
                 <div style="justify-content: center;display: flex;align-items: center;">
-                    <a href="/comment/{{ form.id }}" style="text-decoration: underline;color: #167af6;font-size: 20px;">Commenter</button>
+                    <a href="/comment/{{ form.id }}" style="text-decoration: underline;color: #167af6;font-size: 20px;">Commenter</a>
                 </div>
             </div>
+            <hr style="border: 1px solid black;">
+            <div class="container-fluid shadow-sm">
+                <h6 style="text-align: center;font-weight:bold;">Commentaires</h6>
             
+                {% for commentaire in commentaires %}
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="d-flex flex-start align-items-center">
+                        <img class="rounded-circle shadow-1-strong me-3"
+                          src="/static/assets/images/unknown.jpg" alt="avatar" width="60"
+                          height="60" />
+                        <div>
+                          <h6 class="fw-bold text-primary mb-1">@{{ commentaire.auteur }}</h6>
+                        </div>
+                      </div>
+            
+                      <p class="mt-3 mb-4 pb-2" style="text-decoration:none;color:black;">
+                        {{ commentaire.contenu }}
+                      </p>
+            
+                      <div class="small d-flex justify-content-start">
+                        <a href="#!" class="d-flex align-items-center me-3">
+                          <i class="far fa-thumbs-up me-2"></i>
+                          <p class="mb-0">Like</p>
+                        </a>
+                        <a href="#!" class="d-flex align-items-center me-3">
+                          <i class="far fa-comment-dots me-2"></i>
+                          <p class="mb-0">Comment</p>
+                        </a>
+                        <a href="#!" class="d-flex align-items-center me-3">
+                          <i class="fas fa-share me-2"></i>
+                          <p class="mb-0">Share</p>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                {% endfor %}
+            </div>
+            </div>
+            <div>
+            <br>
+            <br>
+             <hr style="border: 1px solid black;">
+             <br>
+             <br>
         </div>
     </div>
 
