--- a/Main/templates/partenaire.html
+++ b/Main/templates/partenaire.html
@@ -13,15 +13,18 @@
     {% with currentPage='' %}
     {% include 'navbar.html' %}
 {% endwith %}
-<body class="bg-white w-full" style="margin-bottom: 50px;">
 
-    <div class="bg-white w-full " style="margin-bottom: 100px;">
-        <div class="w-2/4 mb-4">
-            <div class="text-center mt-8">
-                <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: blue;">Partenaires</h2>
-                <div class="w-16 h-1 bg-blue-900 mx-auto" style="background-color: blue;"></div>
-            </div>
+<body class="bg-white " style="margin-bottom: 50px;overflow-x:hidden;">
+  <div class="blog-single gray-bg">
+    <div class="ml-5 mt-5">
+      <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+          <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+            Partenaire
+          </p>
+          <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
         </div>
+    </div>
+    <div class="bg-white container-fluid" style="margin-bottom: 100px;overflow-x:hidden;">
        <div class="grid sm:grid-cols-2 mt-5 ">
            <div class="ml-20 bg-white sm:w-[420px] w-[260px] h-[230px] ml-[20px] sm:h-[480px] sm:ml-[127px]   hover:scale-105 transition-transform   ">
                <img src="../static/assets/giz.png" alt="" class="sm:mt-[180px] mt-[100px] sm:ml-[209px]" style="scale: 1.4;">
@@ -32,7 +35,7 @@
                </p>
                <button
                    class="flex float-end mb-4" style="color: white;">
-                   <a href="http://www.ensam-umi.ac.ma/ " class="btn" style="background-color: blue;color: white;">En
+                   <a href="https://www.ensam-umi.ac.ma/ " class="btn" style="background-color: blue;color: white;">En
                        savoir plus</a>
                    <img src="../static/assets/Arrow.png" alt="" class="sm:w-[36px] w-[25px] my-auto">
                </button>
